--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Tony Rayo!</div>
-		<div class="tagline">Website will launch in September 2023.</div>
+		<div class="intro">Hello!</div>
+		<div class="tagline">Website will launch October 15th</div>
 	</main>
 </body>
 </html>
