--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	<meta http-equiv="refresh" content="1;url=https://www.instagram.com/tonyrayo.art/" />
 	<title>tonyrayo.com</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello!</div>
-		<div class="tagline">Website will launch October 15th</div>
+		<div class="tagline">Redirecting to IG</div>
 	</main>
 </body>
 </html>
